; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_dpaux.c_drm_dp_aux_detect.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/tegra/extr_dpaux.c_drm_dp_aux_detect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_dp_aux = type { i32 }
%struct.tegra_dpaux = type { i32 }

@DPAUX_DP_AUXSTAT = common dso_local global i32 0, align 4
@DPAUX_DP_AUXSTAT_HPD_STATUS = common dso_local global i32 0, align 4
@connector_status_connected = common dso_local global i32 0, align 4
@connector_status_disconnected = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @drm_dp_aux_detect(%struct.drm_dp_aux* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.drm_dp_aux*, align 8
  %4 = alloca %struct.tegra_dpaux*, align 8
  %5 = alloca i32, align 4
  store %struct.drm_dp_aux* %0, %struct.drm_dp_aux** %3, align 8
  %6 = load %struct.drm_dp_aux*, %struct.drm_dp_aux** %3, align 8
  %7 = call %struct.tegra_dpaux* @to_dpaux(%struct.drm_dp_aux* %6)
  store %struct.tegra_dpaux* %7, %struct.tegra_dpaux** %4, align 8
  %8 = load %struct.tegra_dpaux*, %struct.tegra_dpaux** %4, align 8
  %9 = load i32, i32* @DPAUX_DP_AUXSTAT, align 4
  %10 = call i32 @tegra_dpaux_readl(%struct.tegra_dpaux* %8, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @DPAUX_DP_AUXSTAT_HPD_STATUS, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @connector_status_connected, align 4
  store i32 %16, i32* %2, align 4
  br label %19

17:                                               ; preds = %1
  %18 = load i32, i32* @connector_status_disconnected, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %17, %15
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local %struct.tegra_dpaux* @to_dpaux(%struct.drm_dp_aux*) #1

declare dso_local i32 @tegra_dpaux_readl(%struct.tegra_dpaux*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
